# FastAPICoreProjectTemplate

./: .flake8  .gitignore  .pre-commit-config.yaml  .zshrc  Dockerfile  LICENSE  Makefile  README.md  gunicorn_config.py  logging_config.json  mypy.ini  pyproject.toml  pyrightconfig.json  setup.cfg
.github/: dependabot.yml
src/: main.py
src/api/models/: ErrorResponseModel.py  SomeRequestModel.py  SomeResponseModel.py
src/api/routes/: logging.py  main.py  test.py
src/api/schemas/: test.py
src/core/: config.py  logging.py
src/core/exceptions/: api.py  auth.py  base.py  handlers.py
src/core/security/: hash.py  tokens.py
src/core/security/tokens/: base.py  inner.py  outer.py
src/core/settings/: app.py  base.py  development.py  env.py  production.py  test.py
src/core/utils/: requestId.py  traceId.py  url.py
src/core/utils/lifespans/: db.py  manager.py
src/dependencies/: main.py
src/models/: responseBase.py  test.py
src/models/errors/: api.py  auth.py  base.py
src/models/nosql/: base.py
src/repositories/: base.py  baseDynamoDB.py
src/schemas/: responseBase.py
src/schemas/errors/: api.py  auth.py  base.py  pynamodb.py
src/tests/: test.py
src/tests/core/: test_auth.py
src/tests/models/: test_responseBase.py
